--- a/demo/src/main/res/layout/layout_main.xml
+++ b/demo/src/main/res/layout/layout_main.xml
@@ -21,4 +21,10 @@
         android:id="@+id/btn_test_json"
         android:text="TEST_JSON"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_test_recyclerview"
+        android:text="TEST_RECYCLER_VIEW"/>
+
 </LinearLayout>
